packages/next-swc/crates/core/tests/errors/server-actions/server-graph/4/output.js
/* __next_internal_action_entry_do_not_use__ {} */ import { createActionProxy, encryptActionBoundArgs, decryptActionBoundArgs } from "private-next-rsc-action-proxy";
export default class Component {
    render() {
        return null;
    }
}
import { ensureServerEntryExports } from "private-next-rsc-action-validate";
ensureServerEntryExports([]);
